# paystack-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
paystack/: __init__.py  base.py  client.py  exceptions.py  webhooks.py
paystack/models/: __init__.py  common.py  customers.py  identity.py  refunds.py  subscriptions.py  transactions.py  transfers.py
paystack/resources/: __init__.py  customers.py  identity.py  refunds.py  subscriptions.py  transactions.py  transfers.py
tests/: conftest.py  test_customers.py  test_identity.py  test_refunds.py  test_subscriptions.py  test_transactions.py  test_transfers.py  test_webhooks.py
