[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paystack-sdk-python"
version = "1.0.0"
description = "Clean, fully-typed Python SDK for the Paystack API — full surface coverage, Pydantic models, and automatic retry logic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Barrkolawole22", email = "Barrkolawole22@users.noreply.github.com" }]
keywords = ["paystack", "payments", "nigeria", "fintech", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "ruff",
    "mypy",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/Barrkolawole22/paystack-python"
Repository = "https://github.com/Barrkolawole22/paystack-python"
"Bug Tracker" = "https://github.com/Barrkolawole22/paystack-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["paystack"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["paystack"]
